using JetBrains.Annotations;
using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class PlayerStaticFields 
{
    public static string Idle => "Idle";
    public static string Move => "Move";
    public static string Jump => "Jump";
    public static string Death => "Death";
    public static string AnimationPath => "Animation/Cat/Cat";
}
